kubernetes/base/networkpolicies/auth-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-allow-backend-frontend-ingress

spec:
  podSelector:
    matchLabels:
      app: auth

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend

        - podSelector:
            matchLabels:
              app: frontend

        - namespaceSelector:
            matchLabels:
              name: ingress-nginx

      ports:
        - protocol: TCP
          port: 8081
