kubernetes/base/networkpolicies/backend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-auth-frontend-ingress

spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend

      ports:
        - protocol: TCP
          port: 8080

    - from:
        - podSelector:
            matchLabels:
              app: auth

      ports:
        - protocol: TCP
          port: 8080

    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx

      ports:
        - protocol: TCP
          port: 8080
