kubernetes/base/networkpolicies/mongo-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-allow-backend-auth
spec:
  podSelector:
    matchLabels:
      app: mongo

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend

      ports:
        - protocol: TCP
          port: 27017

    - from:
        - podSelector:
            matchLabels:
              app: auth

      ports:
        - protocol: TCP
          port: 27017

    - from:
        - podSelector:
            matchLabels:
              app: mongo

      ports:
        - protocol: TCP
          port: 27017
